spacing issues need solving

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,10 +45,6 @@ a, a:visited, a:active {
     text-align: center;
 }
 
-#map {
-    height: 100%;
-}
-
 
 /* nav */
 nav {
@@ -69,12 +65,13 @@ nav ul {
 #landing {
     gap: 16px;
     align-items: center;
-    justify-content: center;
+    margin-top: 4%;
     position: relative;
-    overflow: hidden;
 }
 #map {
     clip-path: circle(40%);
+    height: 100%;
+    width: 100%;
 }
 .hero-container p {
     margin: 2% 0;
